src/objects/Bad_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Bad_Address__c</fullName>
        <label>Bad Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Email__c</fullName>
        <description>Bad customer email.</description>
        <label>Bad Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bad_Zip__c</fullName>
        <label>Bad Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if this is an active bad record.</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Bad Customer</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>Bad_Address__c</columns>
        <columns>Bad_Zip__c</columns>
        <columns>Bad_Email__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Bad Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bad Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>